# manatee

./: .gitlab-ci.yml
.do/: app.yaml
backend/: .gitignore  Dockerfile  development.env  production.env  pyproject.toml  shell.nix
backend/configuration/: settings.toml
backend/manatee/: configuration.py  database.py  main.py
backend/manatee/api/: exceptions.py  router.py
backend/manatee/api/endpoints/: organizations.py  sessions.py
backend/manatee/crud/: organization.py  user.py
backend/manatee/models/: exception.py  organization.py  session.py  user.py
backend/manatee/security/: authentication.py  authorization.py
backend/tests/: conftest.py  test_app.py
backend/tests/unit/crud/: test_create_user.py  test_read_organization_by_id.py  test_read_user_by_id.py  test_read_user_by_username.py
backend/tests/unit/security/: test_decode_token.py  test_generate_token.py  test_hash_password.py  test_retrieve_token.py  test_verify_password.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  postcss.config.js  rollup.config.js  tailwind.config.js
frontend/src/components/: Header.svelte  Wrapper.svelte
frontend/src/components/form/: TwoColumnForm.svelte
frontend/src/components/icons/: Briefcase.svelte  Close.svelte  Home.svelte  Menu.svelte
frontend/src/components/sidebar/: DesktopSidebar.svelte  Logo.svelte  MobileSidebar.svelte  Navigation.svelte  (+3 more)
frontend/src/routes/: _layout.svelte  index.svelte
frontend/src/types/: category.ts  product.ts
frontend/src/util/: api.ts  date.ts  navigation.ts
frontend/static/: global.css
(+8 files in other folders)
